objects/Goal_Letter_Error__c.object
<CustomObject>
    <fields>
        <fullName>AMTANCV_OA1_rateError__c</fullName>
        <label>AMTANCV_OA1_rateError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMTANCV_OA2_rateError__c</fullName>
        <label>AMTANCV_OA2_rateError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMT_ANCV_ICR_AttainmentError__c</fullName>
        <label>AMT_ANCV_ICR_AttainmentError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AMT_ANCV_QUOTAError__c</fullName>
        <label>AMT_ANCV_QUOTAError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_OA1_descError__c</fullName>
        <label>ANCV_AMT_OA1_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_AMT_OA2_descError__c</fullName>
        <label>ANCV_AMT_OA2_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_ICRError__c</fullName>
        <label>ANCV_ICRError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_Installment_Q1_Error__c</fullName>
        <label>ANCV_Installment_Q1 Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_Installment_Q3_Error__c</fullName>
        <label>ANCV_Installment_Q3 Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_OA1_RateError__c</fullName>
        <label>ANCV_OA1_RateError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_OA1_descError__c</fullName>
        <label>ANCV_OA1_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_OA2_RateError__c</fullName>
        <label>ANCV_OA2_RateError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_OA2_descError__c</fullName>
        <label>ANCV_OA2_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ANCV_QuotaError__c</fullName>
        <label>ANCV_QuotaError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssignedAccounts__c</fullName>
        <label>AssignedAccounts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BaseSalary1H__c</fullName>
        <label>BaseSalary1H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_OA1_RateError__c</fullName>
        <label>Booking_OA1_RateError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_OA1_descError__c</fullName>
        <label>Booking_OA1_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_OA2_RateError__c</fullName>
        <label>Booking_OA2_RateError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booking_OA2_descError__c</fullName>
        <label>Booking_OA2_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Car_Plan_Error__c</fullName>
        <label>Car_Plan Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FstHlf_EffAMTANCV_TgtVar_Error__c</fullName>
        <label>FstHlf_EffAMTANCV_TgtVar Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fst_Hlf_Eff_RR_Tgt_VarError__c</fullName>
        <label>Fst_Hlf_Eff_RR_Tgt_VarError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GL_Type_Error__c</fullName>
        <label>GL_Type Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GoalLetter_Status_error__c</fullName>
        <label>GoalLetter_Status error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Error__c</fullName>
        <label>Location Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MGR_Login_Error__c</fullName>
        <label>MGR_Login Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manager_Error__c</fullName>
        <label>Manager Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mileage_error__c</fullName>
        <label>Mileage error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParticipantLogin_Error__c</fullName>
        <label>ParticipantLogin Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Period_Error__c</fullName>
        <label>Plan Period Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRQuota_Error__c</fullName>
        <label>RRQuota Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_ICR_percent_attainmentError__c</fullName>
        <label>RR_ICR_percent_attainmentError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_Installment_Q1Error__c</fullName>
        <label>RR_Installment_Q1Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_Installment_Q3_Error__c</fullName>
        <label>RR_Installment_Q3 Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_OA1_Rate_Error__c</fullName>
        <label>RR_OA1_Rate Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_OA2_Rate_Error__c</fullName>
        <label>RR_OA2_Rate Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_OA2_descError__c</fullName>
        <label>RR_OA2_descError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RR_Target_Var_Weighted_Error__c</fullName>
        <label>RR_Target_Var_Weighted Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ScndHlf_EffAMTANCVTgtVar_Error__c</fullName>
        <label>ScndHlf_EffAMTANCVTgtVar Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scnd_Hlf_Eff_RR_Tgt_VarError__c</fullName>
        <label>Scnd_Hlf_Eff_RR_Tgt_VarError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TargetANCV_Variable__c</fullName>
        <label>TargetANCV_Variable</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TargetBkngComnVar__c</fullName>
        <label>TargetBkngComnVar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_ANCV_Var_WeightedError__c</fullName>
        <label>Target_ANCV_Var_WeightedError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_KC_1H__c</fullName>
        <label>Target_KC_1H</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_KC_2HError__c</fullName>
        <label>Target_KC_2HError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>baseSalary2H__c</fullName>
        <label>baseSalary2H</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bookingICRError__c</fullName>
        <label>bookingICRError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>bookingQuotaError__c</fullName>
        <label>bookingQuotaError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jobTitle_Error__c</fullName>
        <label>JobTitle Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>login_error__c</fullName>
        <label>login error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>salaryEffectiveDate1HError__c</fullName>
        <label>salaryEffectiveDate1HError</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>salaryEffectiveDate2H__c</fullName>
        <label>salaryEffectiveDate2H</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>timePeriodCov_Error__c</fullName>
        <label>TimePeriodCov Error</label>
        <type>TextArea</type>
    </fields>
    <label>Goal Letter Error</label>
    <nameField>
        <displayFormat>GLE-{000000000}</displayFormat>
        <label>Goal Letter Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goal Letter Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>